Introduced several new JS Modules and classes like PersonModule, FightingSystemModule and CategoryModule

--- a/Frontend/components/carousel/carousel.html
+++ b/Frontend/components/carousel/carousel.html
@@ -34,11 +34,11 @@
     -->
 
 </head>
-<body class="">
+<body class="darkmode">
 
     <div class="carousel-container">
         <div class="page-wrapper">
-            <div class="page inactive">
+            <div class="page">
                 <h3>Tafelsystem</h3>
                 <a class="secondary-button" href="#">
                     <span class="text">
