--- a/Frontend/components/table/table.html
+++ b/Frontend/components/table/table.html
@@ -66,7 +66,7 @@
                 </span>
             </a>
         </div>
-        <table class="table space-after" id="23hj23b421">
+        <table class="table smartphone-optimized space-after" id="23hj23b421">
             <thead>
                 <tr>
                     <th>
