--- a/Frontend/css/components/carousel.css
+++ b/Frontend/css/components/carousel.css
@@ -25,18 +25,20 @@
 
 
 .carousel-container {
-  width: 15rem;
-  margin: 0 auto;
-  height: 20rem;
+  width: 100%;
+  height: 20em;
   transition: 0.5s ease;
   z-index: 10;
   perspective: 1000px;
   transform-style: preserve-3d;
+  display: flex;
+  justify-content: center;
+  font-size: 1rem;
 }
 
 .carousel-container .page-wrapper {
   height: 100%;
-  width: 100%;
+  width: 15em;
   position: relative;
   top: 0;
   left: 0;
