--- a/Frontend/css/general-style.css
+++ b/Frontend/css/general-style.css
@@ -124,6 +124,18 @@ main h1 {
     position: relative;
 }
 
+main h3.subheading {
+    text-align: center;
+    font-size: 2rem;
+    border-bottom: 3px solid var(--theme-color-4);
+    box-shadow: 0 15px 10px -10px var(--box-shadow);
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 0.2em;
+    width: 50%;
+    min-width: 15rem;
+}
+
 a.link {
     color: var(--accent-color-1-dark);
     text-decoration: none;
@@ -251,6 +263,63 @@ table, .table, th, td {
     }
 }
 
+a.go-back {
+    font-size: 1rem;
+    position: fixed;
+    top: 0;
+    left: 0;
+    color: var(--accent-color-1-dark);
+    background-color: var(--theme-color-1);
+    z-index: 1000;
+    text-decoration: none;
+    border-radius: 0 0 100% 0;
+    height: 5em;
+    width: 5em;
+    transition: 0.2s ease;
+    border-right: 3px solid var(--accent-color-1-dark);
+    border-bottom: 3px solid var(--accent-color-1-dark);
+    box-shadow: 0 0 10px 0 var(--box-shadow);
+    text-shadow: 2px 2px 3px var(--text-shadow);
+}
+
+
+a.go-back:hover {
+    background-color: var(--theme-color-3);
+    box-shadow: 0 0 15px 5px var(--box-shadow);
+    color: var(--accent-color-1-light);
+    border-color: var(--theme-color-3);
+    transform: translate(0.25em, 0.25em) scale(1.1);
+}
+
+a.go-back:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 0 0 5em 0;
+    transition: 0.2s ease;
+    border-right: 2px solid var(--accent-color-1-light);
+    border-bottom: 2px solid var(--accent-color-1-light);
+    box-shadow: -10px -10px 10px -10px var(--accent-color-1-light) inset;
+    z-index: -1;
+}
+
+a.go-back:hover:before {
+    transform: translate(1em, 1em) scale(1.5);
+}
+
+a.go-back i {
+    position: absolute;
+    top: 40%;
+    left: 40%;
+    transform: translate(-50%, -50%);
+    font-size: 3em;
+    padding: 0.5rem;
+}
+
+
 @media only screen and (min-width: 600px) {
 
 }
@@ -275,6 +344,10 @@ table, .table, th, td {
 
     .container-medium {
         width: 50%;
+    }
+
+    a.go-back {
+        font-size: 1.25rem;
     }
 }
 
