Competition mode progress and time schedule module

--- a/Frontend/components/modal/modal.html
+++ b/Frontend/components/modal/modal.html
@@ -53,7 +53,7 @@
     <main class="">
         <h1>Sample Heading</h1>
 
-        <a class="modal-button" onclick="ModalModule.deleteModalApi('Entscheidung', 'Ja oder nein.', undefined, undefined);">
+        <a class="modal-button" onclick="ModalModule.customModal()">
             Modal
         </a>
 
