--- a/Frontend/components/property-information/property-information.html
+++ b/Frontend/components/property-information/property-information.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="" />
     <meta name="description" content="" />
 
-    <title>Primary Button Floating Container</title>
+    <title>Property Information</title>
 
     <!-- General styles and fonts and stuff like that -->
     <link rel="stylesheet" href="../../css/normalize.css" type="text/css" />
@@ -14,8 +14,7 @@
     <link rel="stylesheet" href="../../css/material-icons-font.css" type="text/css" />
 
     <!-- Specific style -->
-    <link rel="stylesheet" href="../../css/components/primary-button.css" type="text/css" />
-    <link rel="stylesheet" href="../../css/components/primary-button-floating-container.css" type="text/css" />
+    <link rel="stylesheet" href="../../css/components/property-information.css" type="text/css" />
 
     <!--[if lt IE 9]>
     <script src="../../js/html5shiv.js"></script>
@@ -23,6 +22,9 @@
 
     <!-- Every page needs this module to load other (specific) modules -->
     <script src="../../js/Modules/LoadModule.js"></script>
+
+    <!-- This script loads JS modules necessary for this page -->
+    <script src="property-information-entrypoint.js"></script>
 
     <!--
 
@@ -32,9 +34,8 @@
 
     <style>
 
-        .primary-button-floating-container {
-            top: 5rem;
-            left: 5rem;
+        .property-information {
+            background: linear-gradient(90deg, var(--theme-color-4), var(--theme-color-3));
         }
 
     </style>
@@ -42,12 +43,12 @@
 </head>
 <body class="darkmode">
 
-    <div class="primary-button-floating-container">
-        <a class="primary-button mail" href="#">
-            <i class="material-icons">mail</i>
-            <p>E-Mail schreiben</p>
-        </a>
-    </div>
+    <main>
+        <div class="property-information">
+            <p data-property="Kategorie">5</p>
+            <p data-property="Kampfsystem">KO-System</p>
+        </div>
+    </main>
 
 </body>
 </html>
