Finished time schedules

--- a/Frontend/components/time-schedule/time-schedule.html
+++ b/Frontend/components/time-schedule/time-schedule.html
@@ -41,38 +41,29 @@
 
     <div class="oversize-container">
         <div class="time-schedule-container" id="3u4hz5i8934">
-            <hr class="current-time-indicator" />
             <div class="time-scale">
-                <div class="hour full">
-                    <span class="whole">15:00</span>
-                    <span class="quarter">15:15</span>
-                    <span class="half">15:30</span>
-                    <span class="three-fourths">15:45</span>
-                </div>
-                <div class="hour full">
-                    <span class="whole">16:00</span>
-                    <span class="quarter">16:15</span>
-                    <span class="half">16:30</span>
-                    <span class="three-fourths">16:45</span>
-                </div>
-                <div class="hour full">
-                    <span class="whole">17:00</span>
-                    <span class="quarter">17:15</span>
-                    <span class="half">17:30</span>
-                    <span class="three-fourths">17:45</span>
-                </div>
-                <div class="hour short">
-                    <span class="whole">18:00</span>
-                </div>
+                <span class="time whole start"><span class="emphasize">15:00</span></span>
+                <span class="time">15:15</span>
+                <span class="time">15:30</span>
+                <span class="time">15:45</span>
+                <span class="time whole"><span class="emphasize">16:00</span></span>
+                <span class="time">16:15</span>
+                <span class="time">16:30</span>
+                <span class="time">16:45</span>
+                <span class="time whole"><span class="emphasize">17:00</span></span>
+                <span class="time">17:15</span>
+                <span class="time">17:30</span>
+                <span class="time">17:45</span>
+                <span class="time whole"><span class="emphasize">18:00</span></span>
             </div>
             <div class="locations">
                 <div class="fight-place" data-name="location 1">
                     <h2>Location 1</h2>
-                    <div class="category done time-block" data-category="4" style="height: 12rem">
+                    <div class="category time-block" data-category="4" style="height: 12rem">
                         <h3>Kategorie <span class="category-name">4</span></h3>
                         <p><span class="duration">72</span> Minuten</p>
                     </div>
-                    <div class="category done time-block" data-category="5" style="height: 2.33rem">
+                    <div class="category time-block" data-category="5" style="height: 2.33rem">
                         <h3>Kategorie <span class="category-name">5</span></h3>
                         <p><span class="duration">14</span> Minuten</p>
                     </div>
