Midway updating fight maps

--- a/Frontend/css/components/map.css
+++ b/Frontend/css/components/map.css
@@ -21,7 +21,7 @@
   font-size: 1rem; /* ADJUST SIZE */
   min-width: 150rem;
   height: auto;
-  padding: 20rem;
+  padding: 12rem 10rem;
   cursor: grab;
 }
 
