--- a/Frontend/css/components/secondary-button.css
+++ b/Frontend/css/components/secondary-button.css
@@ -26,11 +26,10 @@
   background: var(--theme-color-3);
   transition: 0.5s ease, background-color 0.5s;
   font-size: 1rem;
-  width: 12em;
   height: auto;
   border: 2px solid var(--accent-color-1-dark);
   color: var(--text-color);
-  padding: 0.5em 1.5em;
+  padding: 0.5em 2em;
   box-shadow: 0 2px 8px 3px var(--box-shadow);
 }
 
@@ -100,6 +99,12 @@
   width: 0;
 }
 
+.secondary-button i {
+  font-size: 1.5em;
+  margin-right: 0.25em;
+  vertical-align: -0.25em;
+}
+
 .secondary-button .text {
   position: relative;
   width: 100%;
@@ -131,6 +136,10 @@
   border-color: var(--accent-color-2-dark);
 }
 
+.secondary-button.accent-2 {
+  border-color: var(--accent-color-3-dark);
+}
+
 .secondary-button.disabled {
   color: #4A4A4A;
   border-color: #4A4A4A;
@@ -151,6 +160,12 @@
 .secondary-button.accent-1:hover {
   border: 2px solid var(--accent-color-2-light);
   color: var(--accent-color-2-light);
+}
+
+.secondary-button.accent-2:focus,
+.secondary-button.accent-2:hover {
+  border: 2px solid var(--accent-color-3-light);
+  color: var(--accent-color-3-light);
 }
 
 .secondary-button.disabled:focus,
