Referenced wrong actions.yml in cd.yml

--- a/Frontend/components/header/header.html
+++ b/Frontend/components/header/header.html
@@ -79,7 +79,7 @@
 
     <header class="header">
         <a href="#" class="menu"><i class="material-icons">menu</i></a>
-        <p>SV Tora e.V.</p>
+        <div class="logo"></div>
         <a href="#" class="profile"><i class="material-icons">person</i></a>
         <div class="user-profile">
             <div class="user-wrapper">
