--- a/Frontend/components/material-inputs/material-inputs.html
+++ b/Frontend/components/material-inputs/material-inputs.html
@@ -70,9 +70,9 @@
 
         <div class="container">
             <div class="checkbox-group input-container">
-                <label class="checkbox-input-container">
+                <label class="checkbox-input-container disabled">
                     Option 1
-                    <input type="checkbox" value="Option 1" name="Topic" />
+                    <input type="checkbox" value="Option 1" name="Topic" disabled />
                     <span class="checkmark"></span>
                 </label>
                 <label class="checkbox-input-container">
@@ -85,9 +85,9 @@
 
             <div class="container">
                 <div class="radio-group input-container">
-                    <label class="radio-input-container">
+                    <label class="radio-input-container disabled">
                         Option 1
-                        <input type="radio" name="Topic" value="Option 1" />
+                        <input type="radio" name="Topic" value="Option 1" disabled checked />
                         <span class="checkmark"></span>
                     </label>
                     <label class="radio-input-container">
