Tried fixing iphone safari crash 2.0

--- a/sv-tora/public/css/sites/login.css
+++ b/sv-tora/public/css/sites/login.css
@@ -32,7 +32,7 @@ body {
 }
 
 .darkmode .light-spot {
-    box-shadow: 0 0 50px 60px white;
+    /*box-shadow: 0 0 50px 60px white;*/
 }
 
 .sent .light-fighter {
